kubernetes/templates/celery_process_worker_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: master-thesis-project
  name: celery-process-worker

spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-process-worker

  template:
    metadata:
      labels:
        app: celery-process-worker
        backend: redis-app
    spec:
      containers:
        - name: celery-process-worker-container
          image: celery-worker-image
          imagePullPolicy: Never
          command: ["/bin/sh", "-c"]
          args:
            - celery -A celery_worker worker -Q process_queue
