kubernetes/templates/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app
        backend: redis-app
        database: mongo-app
    spec:
      containers:
        - name: flask-app-container
          image: flask-app-image
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              protocol: TCP
