kubernetes/templates/mongo_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-app

  template:
    metadata:
      labels:
        app: mongo-app
    spec:
      containers:
        - name: mongo-container
          image: mongo
          ports:
            - containerPort: 27017
