kubernetes/templates/mongo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-app-service

spec:
  selector:
    app: mongo-app
  ports:
    - port: 27017
