kubernetes/templates/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: master-thesis-project
  name: redis-app-service

spec:
  selector:
    app: redis-app
  ports:
    - port: 6379
